--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doodle",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,18 +11,22 @@
     "format": "prettier -w ."
   },
   "dependencies": {
-    "astro": "4.7.0",
-    "@astrojs/check": "0.5.10",
-    "typescript": "5.4.5"
+    "astro": "4.15.12",
+    "@astrojs/check": "0.9.4",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
-    "@types/node": "20.12.8",
-    "@typescript-eslint/parser": "7.8.0",
-    "eslint": "8.57.0",
+    "@types/node": "22.7.5",
+    "@typescript-eslint/parser": "8.8.1",
+    "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-astro": "1.1.2",
-    "prettier": "3.2.5",
-    "prettier-plugin-astro": "0.13.0",
-    "sass": "1.76.0"
+    "eslint-plugin-astro": "1.2.4",
+    "prettier": "3.3.3",
+    "prettier-plugin-astro": "0.14.1",
+    "sass-embedded": "1.79.4"
+  },
+  "volta": {
+    "node": "22.9.0",
+    "npm": "10.8.3"
   }
 }
