--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doodle",
   "type": "module",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -13,6 +13,7 @@
   "dependencies": {
     "astro": "4.15.12",
     "@astrojs/check": "0.9.4",
+    "@astrojs/sitemap": "3.2.0",
     "typescript": "5.6.3"
   },
   "devDependencies": {
@@ -27,6 +28,6 @@
   },
   "volta": {
     "node": "22.9.0",
-    "npm": "10.8.3"
+    "npm": "10.9.0"
   }
 }
