--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "astro": "5.2.5",
@@ -22,8 +23,10 @@
     "eslint": "9.20.1",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-astro": "1.3.1",
+    "globals": "15.15.0",
     "prettier": "3.5.0",
     "prettier-plugin-astro": "0.14.1",
-    "sass-embedded": "1.83.4"
+    "sass-embedded": "1.85.0",
+    "typescript-eslint": "8.24.1"
   }
 }
