--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "astro": "5.5.6",
+    "astro": "5.6.1",
     "@astrojs/check": "0.9.4",
-    "@astrojs/sitemap": "3.3.0",
-    "typescript": "5.8.2"
+    "@astrojs/sitemap": "3.3.0"
   },
   "devDependencies": {
-    "@types/node": "22.13.17",
-    "@typescript-eslint/parser": "8.29.0",
-    "eslint": "9.23.0",
-    "eslint-config-prettier": "10.1.1",
+    "@typescript-eslint/parser": "8.29.1",
+    "eslint": "9.24.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-astro": "1.3.1",
     "globals": "16.0.0",
     "prettier": "3.5.3",
     "prettier-plugin-astro": "0.14.1",
-    "sass-embedded": "1.86.1",
-    "typescript-eslint": "8.29.0"
+    "sass-embedded": "1.86.3",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.29.1"
   }
 }
