--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "astro": "5.9.3",
     "@astrojs/check": "0.9.4",
-    "@astrojs/sitemap": "3.4.1"
+    "@astrojs/sitemap": "3.4.1",
+    "astro": "5.10.0"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "8.34.1",
     "eslint": "9.29.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-astro": "1.3.1",
@@ -25,7 +26,6 @@
     "prettier-plugin-astro": "0.14.1",
     "sass-embedded": "1.89.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.34.0",
-    "@typescript-eslint/parser": "8.34.0"
+    "typescript-eslint": "8.34.1"
   }
 }
